src/snapshots/daily_feed__parser__tests__parse_heading.snap
---
source: src/parser.rs
expression: blocks
snapshot_kind: text
---
[
  {
    "Heading": {
      "level": 2,
      "content": {
        "spans": [
          {
            "text": "Test Heading",
            "formatting": {
              "bold": false,
              "italic": false,
              "code": false,
              "link": null
            }
          }
        ]
      }
    }
  }
]
