src/snapshots/daily_feed__parser__tests__parse_simple_html.snap
---
source: src/parser.rs
expression: blocks
snapshot_kind: text
---
[
  {
    "Paragraph": {
      "spans": [
        {
          "text": "Hello ",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        },
        {
          "text": "world",
          "formatting": {
            "bold": true,
            "italic": false,
            "code": false,
            "link": null
          }
        },
        {
          "text": "!",
          "formatting": {
            "bold": false,
            "italic": false,
            "code": false,
            "link": null
          }
        }
      ]
    }
  }
]
